<resources>
    <string name="app_name">Scouting App</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="match_number">Match Number</string>
    <string name="team_number">Team Number</string>
    <string name="general_open">▼ General</string>
    <string name="autonomous_balls_scored_open">▼ Autonomous Balls Scored</string>
    <string name="teleop_balls_scored_open">▼ Teleop Balls Scored</string>
    <string name="misc_open">▼ Miscellaneous</string>
    <string name="general_closed">► General</string>
    <string name="autonomous_balls_scored_closed">► Autonomous Balls Scored</string>
    <string name="teleop_balls_scored_closed">► Teleop Balls Scored</string>
    <string name="misc_closed">► Miscellaneous</string>
    <string name="minus5">-5</string>
    <string name="minus1">-1</string>
    <string name="plus1">+1</string>
    <string name="plus5">+5</string>
    <string name="inner_high">Inner High</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="climb_question">Did they climb?</string>
    <string name="defense">Defense</string>
    <string name="climb_5">Yes, effectively</string>
    <string name="climb_4">Yes, took a while</string>
    <string name="climb_3">No, failed</string>
    <string name="climb_2">No, didn\'t have time</string>
    <string name="climb_1">No, no climbing mechanism</string>
    <string name="defense_played">Defense Played?</string>
    <string name="defense_played_against">Were they defended against?</string>
    <string name="defense_effectiveness_question">How effective was their defense?</string>
    <string name="comments">Comments</string>
    <string name="comments_question">Any additional comments:</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="start_nfc_server">Start NFC Server</string>
    <string name="export">Export</string>
    <string name="delete_csv">Delete CSV</string>
    <string name="show_csv">Show CSV</string>


</resources>
